# quran-cli

./: .gitignore  ABOUT.md  COMMUNITY_HELP.md  DESIGN_PATTERN.md  Dockerfile  INSTALL.md  LICENSE  README.md  REQUIREMENTS.md  STYLE.md  THINGS.md  error-log.md  install.ps1  install.sh  pyproject.toml  setup-github.sh  soonfeature.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: CLOUD_BOT.md  COMMANDS.md  NOTIFICATION_UPDATES.md  PLAN.md  RELEASE_v1.2.0.md  REMINDERS.md
docs/fixing./: notifier.py  pyproject.toml  read.py  scheduler.py
docs/fixing./hadith_news_feature/: ABOUT.md  README.md  THINGS.md  cli.py  gui.py  hadith.py
quran/: __main__.py  cli.py
quran/bot/: telegram_bot.py
quran/commands/: bookmark.py  bot.py  cache.py  clock.py  config.py  connect.py  eid.py  fasting.py  gui.py  guide.py  hadith.py  lang.py  lock.py  namaz.py  news.py  pray.py  quote.py  ramadan.py  read.py  remind.py  schedule.py  search.py  streak.py  tafsir.py  update.py
quran/config/: settings.py
quran/connectors/: __init__.py  base.py  connectors.py
quran/core/: bookmark_store.py  location.py  notifier.py  prayer_times.py  quran_engine.py  ramadan.py  scheduler.py  streak.py
quran/core/ai/: rag_engine.py
quran/ui/: renderer.py
tests/: test_core.py  test_lock.py  test_notifications_fix.py
